2008-04-17  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam.

        Add DOMApplicationCache implementation.
        
        * dom/EventNames.h:
        Add new event names.
        
        * dom/EventTarget.cpp:
        (WebCore::EventTarget::toDOMApplicationCache):
        * dom/EventTarget.h:
        Add EventTarget conversion method.
        
        * loader/appcache/ApplicationCacheGroup.h:
        (WebCore::ApplicationCacheGroup::):
        (WebCore::ApplicationCacheGroup::status):
        (WebCore::ApplicationCacheGroup::update):
        (WebCore::ApplicationCacheGroup::newestCache):
        Add more stubs.
        
        * loader/appcache/DOMApplicationCache.cpp:
        * loader/appcache/DOMApplicationCache.h:

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::clear):
        (WebCore::DOMWindow::applicationCache):
        * page/DOMWindow.h:
        (WebCore::DOMWindow::optionalApplicationCache):
        Add ApplicationCache member.
        
2008-04-17  Anders Carlsson  <andersca@apple.com>

        Build fix.

        * WebCore.vcproj/WebCore.vcproj:

2008-04-17  Dean Jackson  <dino@apple.com>

        Reviewed by Hyatt.

        Fix for <rdar://problem/5849968> translate method should have Y=0 when only X is present

        Test: fast/css/transform-default-parameter.html

        * css/CSSStyleSelector.cpp: (WebCore::CSSStyleSelector::applyProperty):
        translate function with only X parameter now leaves the Y parameter as zero.

2008-04-17  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam.
        
        Add plumbing for associating document loaders with application caches.
        
        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::DocumentLoader):
        (WebCore::DocumentLoader::~DocumentLoader):
        (WebCore::DocumentLoader::originalURL):
        (WebCore::DocumentLoader::requestURL):
        (WebCore::DocumentLoader::responseURL):