@@ -195,7 +195,7 @@ namespace WebCore {
         
         void setApplicationCache(PassRefPtr<ApplicationCache> applicationCache);
         ApplicationCache* applicationCache() const { return m_applicationCache.get(); }
-        ApplicationCache* toplevelApplicationCache() const;
+        ApplicationCache* topLevelApplicationCache() const;
 #endif
         
     protected:
